Adding more sub-pages.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <hr>
             <h5>Research</h5>
             <ul>
-              <li><a href="http://zurb.com/studios">Ynes Mexia</a></li>
+              <li><a href="sub/ynes/index.html">Ynes Mexia</a></li>
               <li><a href="http://github.com/ghaida">NASA Ames</a></li>
               <li><a href="http://zurb.com/speak">Yosemite National Park</a></li>
             </ul>
