Changing background image.

--- a/sub/ynes/index.html
+++ b/sub/ynes/index.html
@@ -46,11 +46,13 @@
     <section class="ynes-book">
       <div class="row">
         <div class="medium-4 columns">
-          <img src="http://placekitten.com/300/320" alt="ynes book cover">
+          <img src="images/ynes.jpg" alt="ynes book cover">
         </div>
         <div class="medium-8 columns">
-          <h4>Ynes Book Title</h4>
-          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Davis has compiled an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the botany community.</p>
+          <h4>Ynes Book Project</h4>
+          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Kathryn Davis has compiled an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the botany community.
+          </p>
+          <p class="lead">This anthology will</p>
           <a href="http://ucjeps.berkeley.edu/jeps/globe/Globe2009_Vol19No3.pdf" class="button">More Book Info</a>
         </div>
       </div>
@@ -72,11 +74,8 @@
         </div>
         <div class-"medium-9 columns">
           <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
+            <li><a href="http://zoombear.github.io/">Go Home</a></li>
             <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
-            <li><a href="#">Link 5</a></li>
           </ul>
         </div>
       </div>
