--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
           <section class="about-me-info">
             <h1>Vanessa Archambault</h1>
-            <p>I'm a Data Analyst at <a href="http://apple.com"> </a>. I like data, maps, plants, and rock climbing.</p>
+            <p>I'm a Content Data Analyst at <a href="http://apple.com"> </a>. I like data, maps, plants, and rock climbing.</p>
             <hr>
             <h5>Personal Research</h5>
             <ul>
@@ -37,7 +37,10 @@
           </section>
         </div>
         <div class="img-src">
-          <p><a href="http://nationalgeographicmagazine.tumblr.com/post/27698174609/japanese-maple-oregon-photograph-by-fred-an-a">Beautiful Japanese Maple photo taken by Fred An for National Geographic Magazine</a></p>
+          <p><a href="http://foundation.zurb.com/">Built on Foundation</a></p>
+        </div>
+        <div class="img-src">
+          <p><a href="https://github.com/ghaida"> Inspired by Ghaida</a></p>
         </div>
       </div>
     </div>
