Fixing link to old ynes project.

--- a/sub/ynes/index.html
+++ b/sub/ynes/index.html
@@ -39,7 +39,7 @@
         <div class="small-12 columns">
           <h1>Initial Prototype Project</h1>
           <h3 class="subheader">Ynes Mexia was a botanist who collected plant samples throughout Mexico, Argentina, Chile, Brazil, Ecuador and Peru. Here we have mapped her travels, as well as created a database of her plant sample data as she wrote in her travel journals.</h3>
-          <a href="sub/ymexia/ymexia_index.html" class="button">Check out the intial Project!</a>
+          <a href="../ymexia/ymexia_index.html" class="button">Check out the intial Project!</a>
         </div>
       </div>
     </section>  
