Working on syntax of ynes page.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="content-container">
         <div class="about-me">
           <div class="avatar-wrap">
-            <img class="avatar" src="img/me.jpg" alt="Ghaida Zahran">
+            <img class="avatar" src="img/me.jpg" alt="Vanessa Archambault">
           </div>
           <section class="about-me-info">
             <h1>Vanessa Archambault</h1>
