--- a/sub/ynes/index.html
+++ b/sub/ynes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>Ynes Mapping Project</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -19,9 +19,9 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li><a href="#">Ynes Maps</a></li>
-          <li><a href="#">Ynes Book</a></li>
-          <li><a href="#">About Kathryn</a></li>
+          <li><a href="../ymexia/ymexia_index.html">Ynes Maps</a></li>
+          <li><a href="http://ucjeps.berkeley.edu/jeps/globe/Globe2009_Vol19No3.pdf">Ynes History</a></li>
+          <li><a href="http://www.sjsu.edu/people/kathryn.davis/">About Kathryn</a></li>
         </ul>
       </section>
     </nav>
@@ -45,15 +45,15 @@
     </section>  
     <section class="ynes-book">
       <div class="row">
-        <div class="medium-4 columns">
-          <img src="images/ynes.jpg" alt="ynes book cover">
+        <div class="medium-2 medium-offset-2 columns">
+          <img class="image-tall" src="images/ynes.jpg" alt="ynes book cover">
         </div>
-        <div class="medium-8 columns">
+        <div class="medium-6 left columns">
           <h4>Ynes Book Project</h4>
-          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Kathryn Davis has compiled an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the botany community.
+          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Kathryn Davis is in the process of compiling an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the botany community.
           </p>
-          <p class="lead">This anthology will</p>
-          <a href="http://ucjeps.berkeley.edu/jeps/globe/Globe2009_Vol19No3.pdf" class="button">More Book Info</a>
+          <!-- <p class="lead">This anthology will</p>
+          <a href="http://ucjeps.berkeley.edu/jeps/globe/Globe2009_Vol19No3.pdf" class="button">More Book Info</a> -->
         </div>
       </div>
     </section>
@@ -62,7 +62,7 @@
         <div class="small-12 columns">
           <img src="images/kathryn.JPG" alt="about Kathryn Davis">
           <h4>About Kathryn Davis</h4>
-          <p class="lead">Kathryn Davis is awesome and a nerd.</p>
+          <p class="lead">Kathryn Davis currently serves as Chair of the Geography Department as well as Director of Global Studies at San Jose State University. Since receiving her PhD in Geography from UC Berkeley in 2002, Kathryn's focus has been centered on the uncovering and preservation of Ynes Mexia's contributions to the field of Botany. This Mapping Project stems from Kathryn's qualitative research. Acting as mentor and thesis advisor to Vanessa Archambault and other SJSU students, Kathryn continues to successfully engage many budding geographers in the ongoing Ynes Mexia Anthology Project. </p>
           <a href="http://works.bepress.com/kathryn_davis/">Kathryn's Work &raquo;</a>
         </div>
       </div>
@@ -75,7 +75,7 @@
         <div class-"medium-9 columns">
           <ul class="inline-list right">
             <li><a href="http://zoombear.github.io/">Go Home</a></li>
-            <li><a href="#">Link 2</a></li>
+            <!-- <li><a href="#">Link 2</a></li> -->
           </ul>
         </div>
       </div>
