Adding more to the ynes sub page.

--- a/sub/ynes/index.html
+++ b/sub/ynes/index.html
@@ -28,8 +28,9 @@
     <section class="hero text-center">
       <div class="row">
         <div class="small-12 columns">
-          <h1>Awesome mapping project!</h1>
-          <h3 class="subheader">Ynes Mexia was a botanist who collected plant samples throughout Mexico, Argentina, Chile, Brazil, Ecuador and Peru. Here we have mapped her travels, as well as created a database of her plant sample data as she wrote in her travel journals.</h3>
+          <h1>Current mapping project!</h1>
+          <h3 class="subheader">Ynes Mexia was a botanist who collected plant samples throughout Mexico, Argentina, Chile, Brazil, Ecuador and Peru. Here I am in the process of mapping her travels, as well as creating a database of her plant sample data as she wrote in her travel journals.</h3>
+          <br>
           <a href="#" class="button">Check out the Project!</a>
         </div>
       </div>
@@ -37,36 +38,62 @@
     <section class="hero text-center">
       <div class="row">
         <div class="small-12 columns">
-          <h1>Initial Prototype Project</h1>
-          <h3 class="subheader">Ynes Mexia was a botanist who collected plant samples throughout Mexico, Argentina, Chile, Brazil, Ecuador and Peru. Here we have mapped her travels, as well as created a database of her plant sample data as she wrote in her travel journals.</h3>
+          <h2>Initial Prototype Project</h2>
+          <h3 class="subheader">In 2012 a team of SJSU geographers created a prototype map of Ynes' collection.</h3>
           <a href="../ymexia/ymexia_index.html" class="button">Check out the intial Project!</a>
+          <br>
+          <h3>Team members</h3>
+          <a href="mailto:jlrat97@yahoo.com">Jamie Ratliff &raquo;</a>
+          <br>
+          <br>
+          <a href="mailto:varch02@gmail.com">Vanessa Archambault &raquo;</a>
+          <br>
+          <br>
+          <a href="mailto:alfonso_tiii@yahoo.com">Alfonso Tinoco &raquo;</a>
+          <br>
+          <br>
+          <a href="mailto:sriparna18@hotmail.com">Sriparna Sen &raquo;</a>
+        </div>
+      </div>
+    </section>
+    <br>
+    <br>
+    <section class="about-kathryn text-center">
+      <div class="row">
+        <div class="small-12 columns">
+          <h3>About Kathryn Davis</h3>
+          <img src="images/kathryn.JPG" alt="about Kathryn Davis">
+          <br>
+          <br>
+          <p class="lead">Kathryn Davis currently serves as Chair of the Geography Department as well as Director of Global Studies at San Jose State University. Since receiving her PhD in Geography from UC Berkeley in 2002, Kathryn's focus has been centered on the uncovering and preservation of Ynes Mexia's contributions to the field of Botany. This Mapping Project stems from Kathryn's qualitative research. Acting as mentor and thesis advisor to Vanessa Archambault and other SJSU students, Kathryn continues to successfully engage many budding geographers in the ongoing Ynes Mexia Anthology Project. </p>
+          <a href="http://works.bepress.com/kathryn_davis/">Kathryn's Work &raquo;</a>
         </div>
       </div>
     </section>  
     <section class="ynes-book">
       <div class="row">
         <div class="medium-2 medium-offset-2 columns">
-          <img class="image-tall" src="images/ynes.jpg" alt="ynes book cover">
+          <img src="images/ynes.jpg" alt="ynes book cover">
         </div>
         <div class="medium-6 left columns">
           <h4>Ynes Book Project</h4>
-          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Kathryn Davis is in the process of compiling an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the botany community.
+          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Kathryn Davis is in the process of compiling an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the field of Botany and the Botany community. 
           </p>
-          <!-- <p class="lead">This anthology will</p>
-          <a href="http://ucjeps.berkeley.edu/jeps/globe/Globe2009_Vol19No3.pdf" class="button">More Book Info</a> -->
         </div>
-      </div>
-    </section>
-    <section class="about-kathryn text-center">
-      <div class="row">
-        <div class="small-12 columns">
-          <img src="images/kathryn.JPG" alt="about Kathryn Davis">
-          <h4>About Kathryn Davis</h4>
-          <p class="lead">Kathryn Davis currently serves as Chair of the Geography Department as well as Director of Global Studies at San Jose State University. Since receiving her PhD in Geography from UC Berkeley in 2002, Kathryn's focus has been centered on the uncovering and preservation of Ynes Mexia's contributions to the field of Botany. This Mapping Project stems from Kathryn's qualitative research. Acting as mentor and thesis advisor to Vanessa Archambault and other SJSU students, Kathryn continues to successfully engage many budding geographers in the ongoing Ynes Mexia Anthology Project. </p>
-          <a href="http://works.bepress.com/kathryn_davis/">Kathryn's Work &raquo;</a>
-        </div>
-      </div>
-    </section>
+      </section>
+      <br>
+      <br>
+      <section class="hero text-center">
+        <div class="row">
+          <div class="small-12 columns">
+            <h4>Research Institutions</h4>
+            <p class="lead">The California Academy of Sciences in San Francisco, CA and the Jepson Herbarium in Berkeley, CA hold many of Ynes' materials within their Archives. Additional research is currently being undertaken by geographers through both institutions.</p>
+            <a href="http://www.calacademy.org/blogs/library/?p=2520" class="button">Academy of Sciences</a>
+            <br>
+            <br>
+            <a href="http://ucjeps.berkeley.edu/archon/?p=collections/findingaid&id=77&q=" class="button">Jepson Herbarium</a>
+          </div>
+      </section>
     <footer>
       <div class="row">
         <div class="medium-3 columns">
