--- a/sub/ynes/index.html
+++ b/sub/ynes/index.html
@@ -28,45 +28,50 @@
     <section class="hero text-center">
       <div class="row">
         <div class="small-12 columns">
-          <h1>Current mapping project!</h1>
+          <h1>Ynes Travel Timeline Map</h1>
           <h3 class="subheader">Ynes Mexia was a botanist who collected plant samples throughout Mexico, Argentina, Chile, Brazil, Ecuador and Peru. Here I am in the process of mapping her travels, as well as creating a database of her plant sample data as she wrote in her travel journals.</h3>
           <br>
-          <a href="#" class="button">Check out the Project!</a>
+          <h3 class="lead">Components of Upcoming Mapping Project:</h3>
+          <p class="lead">
+            - Interactive Timeline Map using <a href="http://d3js.org/">D3.js</a>
+            <br>
+            - MySQL database of Ynes' botanical records</p>
+            <br>
+          <a href="#" class="button">Timeline Map Coming Soon!</a>
         </div>
       </div>
     </section>  
-    <section class="hero text-center">
+    <section class="hero">
       <div class="row">
-        <div class="small-12 columns">
-          <h2>Initial Prototype Project</h2>
-          <h3 class="subheader">In 2012 a team of SJSU geographers created a prototype map of Ynes' collection.</h3>
-          <a href="../ymexia/ymexia_index.html" class="button">Check out the intial Project!</a>
-          <br>
-          <h3>Team members</h3>
-          <a href="mailto:jlrat97@yahoo.com">Jamie Ratliff &raquo;</a>
-          <br>
-          <br>
-          <a href="mailto:varch02@gmail.com">Vanessa Archambault &raquo;</a>
-          <br>
-          <br>
-          <a href="mailto:alfonso_tiii@yahoo.com">Alfonso Tinoco &raquo;</a>
-          <br>
-          <br>
-          <a href="mailto:sriparna18@hotmail.com">Sriparna Sen &raquo;</a>
+        <div class="medium-9 columns">
+          <h3>Prototype Botanical Collection Map</h3>
+          <p class="lead">In 2012 a team of SJSU geographers created a prototype map of Ynes' collection.</p>
+          <a href="../ymexia/ymexia_index.html" class="button">Check out the Initial Project!</a>
+        </div>
+        <div class="medium-3 columns">
+          <div class="panel">
+            <h4>Team members</h4>
+            <ul class="no-bullet">
+              <li><a href="mailto:jlrat97@yahoo.com">Jamie Ratliff &raquo;</a></li>
+              <li><a href="mailto:varch02@gmail.com">Vanessa Archambault &raquo;</a></li>
+              <li><a href="mailto:alfonso_tiii@yahoo.com">Alfonso Tinoco &raquo;</a></li>
+              <li><a href="mailto:sriparna18@hotmail.com">Sriparna Sen &raquo;</a></li>
+            </ul>  
+          </div>
         </div>
       </div>
     </section>
     <br>
     <br>
-    <section class="about-kathryn text-center">
+    <section class="about-kathryn">
       <div class="row">
-        <div class="small-12 columns">
-          <h3>About Kathryn Davis</h3>
+        <div class="medium-3 columns">
           <img src="images/kathryn.JPG" alt="about Kathryn Davis">
-          <br>
-          <br>
-          <p class="lead">Kathryn Davis currently serves as Chair of the Geography Department as well as Director of Global Studies at San Jose State University. Since receiving her PhD in Geography from UC Berkeley in 2002, Kathryn's focus has been centered on the uncovering and preservation of Ynes Mexia's contributions to the field of Botany. This Mapping Project stems from Kathryn's qualitative research. Acting as mentor and thesis advisor to Vanessa Archambault and other SJSU students, Kathryn continues to successfully engage many budding geographers in the ongoing Ynes Mexia Anthology Project. </p>
-          <a href="http://works.bepress.com/kathryn_davis/">Kathryn's Work &raquo;</a>
+        </div>
+        <div class="medium-9 columns">
+          <h3>Project Advisor - Kathryn Davis</h3>
+          <p class="lead">This Mapping Project stems from Kathryn's qualitative research on Ynes Mexia's contribution to the field of Botany. Acting as mentor and thesis advisor to Vanessa Archambault and other SJSU students, Kathryn continues to successfully engage many budding geographers in the ongoing Ynes Mexia Anthology Project. </p>
+          <a href="http://works.bepress.com/kathryn_davis/">Kathryn's Research &raquo;</a>
         </div>
       </div>
     </section>  
@@ -76,8 +81,8 @@
           <img src="images/ynes.jpg" alt="ynes book cover">
         </div>
         <div class="medium-6 left columns">
-          <h4>Ynes Book Project</h4>
-          <p class="lead">Ynes' work and her contribution to the study of botany is invaluable. Dr. Kathryn Davis is in the process of compiling an anthology of her travels and work in hopes that bringing her work and story to light will ensure Ynes' continued contribution to the field of Botany and the Botany community. 
+          <h4>Documenting Ynes' travels</h4>
+          <p class="lead">Ynes Mexia meticulously collected over __ plant samples in her 13 years of field study. Dr. Kathryn Davis is in the process of compiling an anthology of her travels and work. 
           </p>
         </div>
       </section>
