Adding rough map.

--- a/sub/ynes/index.html
+++ b/sub/ynes/index.html
@@ -37,7 +37,7 @@
             <br>
             - MySQL database of Ynes' botanical records</p>
             <br>
-          <a href="#" class="button">Timeline Map Coming Soon!</a>
+          <a href="../timeline/index.html" class="button">Timeline Map Coming Soon!</a>
         </div>
       </div>
     </section>  
