--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
           <section class="about-me-info">
             <h1>Vanessa Archambault</h1>
-            <p>I'm a Content Data Analyst at <a href="http://apple.com"> </a>. I like data, maps, plants, and rock climbing.</p>
+            <p>I'm a Content Data Analyst at <a href="http://create.io"> Create</a>. I like data, maps, plants, and rock climbing.</p>
             <hr>
             <h5>Personal Research</h5>
             <ul>
