--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -99,7 +99,7 @@
         </div>
       </div>
         </div>
-<h1 class="center"><a href="https://www.create.io/" target="_blank"><img src="assets/create-ico.png" width="300"></a></h1>
+<h1 class="center"><a href="https://www.create.io/" target="_blank"><img src="assets/images/create-ico.png" width="300"></a></h1>
 <hr class="soften">
 
 <p>
@@ -119,18 +119,18 @@ For more details, see:
 </p>
 
 <div class="center">
-<a href="images/bhuvan/1.png" target="_blank"><img src="assets/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-<a href="images/bhuvan/2.png" target="_blank"><img src="assets/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="images/bhuvan/1.png" target="_blank"><img src="assets/images/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="images/bhuvan/2.png" target="_blank"><img src="assets/images/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
 
 <div class="center">
-<a href="images/bhuvan/3.png" target="_blank"><img src="assets/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-<a href="images/bhuvan/4.png" target="_blank"><img src="assets/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="images/bhuvan/3.png" target="_blank"><img src="assets/images/customMapImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="images/bhuvan/4.png" target="_blank"><img src="assets/images/osmImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
 
 <div class="center">
-<a href="images/bhuvan/5.png" target="_blank"><img src="assets/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-<a href="images/bhuvan/6.png" target="_blank"><img src="assets/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="images/bhuvan/5.png" target="_blank"><img src="assets/images/stamenImage.jpg" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="images/bhuvan/6.png" target="_blank"><img src="assets/images/stamenWaterImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
 
 <hr class="soften">
