updating demo site

--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -118,7 +118,43 @@ For more details, see:
 </ul>
 </p>
 
+<div style="height: 200px;">
+<h3 class="center">Key Features</h3>
+<div style="width: 50%; float: left;">
+<ul>
+    <li>Supports most mainstream desktop and mobile browsers</li>
+    <li>Supports multiple satellite groups</li>
+    <li>Allows tracking of multiple satellites in any view</li>
+    <li>Supports mutual observers, which allows planning of radio contacts</li>
+    <li>Generates pass predictions</li>
+    <li>Includes plugin architecture for SPM engines</li>
+</ul>
+</div>
+
+<div style="width: 50%; float: left;">
+<ul>
+    <li>List View: A table based view</li>
+    <li>3D View: A globe view, using Cesium</li>
+    <li>Passes View: A customisable hybrid view</li>
+    <li>Polar View: A polar chart view</li>
+    <li>Sky View: A view looking at the horizon</li>
+    <li>Timeline View: A timeline of satellite passes</li>
+    <li>DX View: Shows which amateur radio callsigns are visible to the satellite</li>
+</ul>    
+</div>
+</div>
+
 <div class="center">
+
+<a href="https://www.create.io/" target="_blank">
+<div class="center" style="width: 770px; height: 300px; background-image:url('assets/images/login.png');">
+<span style="margin-top: 55px; display: inline-block; padding: 40px; background-color: rgba(220, 220, 220, 0.7); border: 1px solid rgb(220, 220, 220); border-radius: 5px; font-weight: bold; font-size: 350%; color: rgb(50, 50, 50); line-height: 110%;">
+Run<br />App
+</span>
+</div>
+</a>
+
+<br />
 <a href="images/bhuvan/1.png" target="_blank"><img src="assets/images/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 <a href="images/bhuvan/2.png" target="_blank"><img src="assets/images/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
