--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -103,7 +103,7 @@
 <hr class="soften">
 
 <p>
-<a href="https://www.create.io/" target="_blank">Create</a> is a...describe what Cesium is... 
+<a href="https://www.create.io/" target="_blank">Create</a> is a...describe what Create is... 
 </p>
 <p>
 Cesium-based <a href="https://www.create.io/" target="_blank">Create</a> ... describe how Create utilized Cesium to its fullest...
@@ -122,24 +122,23 @@ For more details, see:
 <h3 class="center">Key Features</h3>
 <div style="width: 50%; float: left;">
 <ul>
-    <li>Supports most mainstream desktop and mobile browsers</li>
-    <li>Supports multiple satellite groups</li>
-    <li>Allows tracking of multiple satellites in any view</li>
-    <li>Supports mutual observers, which allows planning of radio contacts</li>
-    <li>Generates pass predictions</li>
-    <li>Includes plugin architecture for SPM engines</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
 </ul>
 </div>
 
 <div style="width: 50%; float: left;">
 <ul>
-    <li>List View: A table based view</li>
-    <li>3D View: A globe view, using Cesium</li>
-    <li>Passes View: A customisable hybrid view</li>
-    <li>Polar View: A polar chart view</li>
-    <li>Sky View: A view looking at the horizon</li>
-    <li>Timeline View: A timeline of satellite passes</li>
-    <li>DX View: Shows which amateur radio callsigns are visible to the satellite</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
+    <li>Key feature</li>
 </ul>    
 </div>
 </div>
@@ -167,6 +166,28 @@ Run<br />App
 <div class="center">
 <a href="images/bhuvan/5.png" target="_blank"><img src="assets/images/stamenImage.jpg" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 <a href="images/bhuvan/6.png" target="_blank"><img src="assets/images/stamenWaterImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+</div>
+
+
+<hr class="soften"/>
+<p>
+The video below shows Create magic!!!:
+</p>
+<ul>
+    <li><b>something</b>: description of something;</li>
+    <li><b>something</b>: description of something;</li>
+    <li><b>something</b>: description of something; and</li>
+    <li><b>something</b>: description of something.</li>
+</ul>
+<p></p>
+<div style="text-align: left;">
+For more details, email <a href="mailto:sm@create.io">sm@create.io</a>. 
+</div>
+
+<hr class="soften">
+
+<div class="center">
+<iframe width="560" height="315" src="//www.youtube.com/embed/EvSC76mDows" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <hr class="soften">
