--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -154,18 +154,28 @@ Run<br />App
 </a>
 
 <br />
-<a href="images/bhuvan/1.png" target="_blank"><img src="assets/images/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-<a href="images/bhuvan/2.png" target="_blank"><img src="assets/images/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/image1.png" target="_blank"><img src="assets/images/image1.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/image2.png" target="_blank"><img src="assets/images/image2.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
 
 <div class="center">
-<a href="images/bhuvan/3.png" target="_blank"><img src="assets/images/customMapImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-<a href="images/bhuvan/4.png" target="_blank"><img src="assets/images/osmImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/customMapImage.png" target="_blank"><img src="assets/images/customMapImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/currentUse.png" target="_blank"><img src="assets/images/currentUse.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
 
 <div class="center">
-<a href="images/bhuvan/5.png" target="_blank"><img src="assets/images/stamenImage.jpg" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-<a href="images/bhuvan/6.png" target="_blank"><img src="assets/images/stamenWaterImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/stamenImage.png" target="_blank"><img src="assets/images/stamenImage.jpg" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/stamenWaterImage.png" target="_blank"><img src="assets/images/stamenWaterImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+</div>
+
+<div class="center">
+<a href="assets/images/hazard.png" target="_blank"><img src="assets/images/hazard.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/heatmaps.png" target="_blank"><img src="assets/images/heatmaps.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+</div>
+
+<div class="center">
+<a href="assets/images/historic.png" target="_blank"><img src="assets/images/historic.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+<a href="assets/images/residential.png" target="_blank"><img src="assets/images/residential.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
 </div>
 
 
