--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="center">
                 <a href="assets/images/stamenImage.png" target="_blank"><img src="assets/images/stamenImage.jpg" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-                <a href="assets/images/stamenWaterImage.png" target="_blank"><img src="assets/images/stamenWaterImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+                <a href="assets/images/stamenWaterImage.png" target="_blank"><img src="assets/images/filter.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
             </div>
             <div class="center">
                 <a href="assets/images/hazard.png" target="_blank"><img src="assets/images/hazard.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
@@ -152,7 +152,7 @@
             </div>
             <div class="center">
                 <a href="assets/images/historic.png" target="_blank"><img src="assets/images/historic.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-                <a href="assets/images/residential.png" target="_blank"><img src="assets/images/residential.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+                <a href="assets/images/residential.png" target="_blank"><img src="assets/images/zoning.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
             </div>
             <hr class="soften"/>
             <p>
