--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -109,6 +109,8 @@
                 <li><a href="http://www.realestatetechnews.com/create-property-analysis-fingertips-2/" target="_blank">Real Estate Tech News</a> : Create: Property Analysis at your Fingertips</li>
             </ul>
             </p>
+            <br>
+            <br>
             <div style="height: 200px;">
                 <h3 class="center">Key Features</h3>
                 <div style="width: 50%; float: left;">
@@ -139,21 +141,18 @@
                 <br>
             </div>
             <div class="center">
-                <a href="assets/images/customMapImage.png" target="_blank"><img src="assets/images/customMapImage.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-                <a href="assets/images/currentUse.png" target="_blank"><img src="assets/images/currentUse.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+                <a href="assets/images/customMapImage.png" target="_blank"><img src="assets/images/customMapImage.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
+                <a href="assets/images/zoning.png" target="_blank"><img src="assets/images/zoning.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
             </div>
             <div class="center">
-                <a href="assets/images/stamenImage.png" target="_blank"><img src="assets/images/stamenImage.jpg" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-                <a href="assets/images/stamenWaterImage.png" target="_blank"><img src="assets/images/filter.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+                <a href="assets/images/filter.png" target="_blank"><img src="assets/images/filter.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
+                <a href="assets/images/currentUse.png" target="_blank"><img src="assets/images/currentUse.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
             </div>
             <div class="center">
-                <a href="assets/images/hazard.png" target="_blank"><img src="assets/images/hazard.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-                <a href="assets/images/heatmaps.png" target="_blank"><img src="assets/images/heatmaps.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
+                <a href="assets/images/hazard.png" target="_blank"><img src="assets/images/hazard.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
+                <a href="assets/images/historic.png" target="_blank"><img src="assets/images/historic.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
             </div>
-            <div class="center">
-                <a href="assets/images/historic.png" target="_blank"><img src="assets/images/historic.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-                <a href="assets/images/residential.png" target="_blank"><img src="assets/images/zoning.png" width="400" style="display: inline-block; width: 400; margin: 5px;"></a>
-            </div>
+
             <hr class="soften"/>
             <p>
                 The video below shows Create magic!!!:
