--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -92,7 +92,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="center"><a href="https://www.create.io/" target="_blank"><img src="assets/images/create-ico.png" width="300"></a></h1>
+            <h1 class="center"><a href="https://www.create.io/" target="_blank"><img src="assets/images/TwitterHeader.png" width="800px"></a></h1>
             <hr class="soften">
             <p>
                 <a href="https://www.create.io/" target="_blank">Create</a> is a real estate information platform that makes it easier for development teams to collaborate by bringing research, analysis, and project management together on a single site. <a href="https://www.create.io/" target="_blank">Create</a> aggregates streaming data on buildings, properties, market activity, and project economics from leading public and commercial data providers. <a href="https://www.create.io/" target="_blank">Create's</a> powerful search tools make discovering new opportunities easy while dynamic analysis helps to drive smarter investment decision making. 
@@ -152,24 +152,18 @@
                 <a href="assets/images/hazard.png" target="_blank"><img src="assets/images/hazard.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
                 <a href="assets/images/historic.png" target="_blank"><img src="assets/images/historic.png" width="400" height="250" style="display: inline-block; width: 400px; height: 250px; margin: 5px;"></a>
             </div>
-
-            <hr class="soften"/>
-            <p>
-                The video below shows Create magic!!!:
-            </p>
-            <ul>
-                <li><b>something</b>: description of something;</li>
-                <li><b>something</b>: description of something;</li>
-                <li><b>something</b>: description of something; and</li>
-                <li><b>something</b>: description of something.</li>
-            </ul>
-            <p></p>
-            <div style="text-align: left;">
-                For more details, email <a href="mailto:sm@create.io">sm@create.io</a>. 
-            </div>
-            <hr class="soften">
             <div class="center">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/EvSC76mDows" frameborder="0" allowfullscreen></iframe>
+                <hr class="soften"/>
+                <p>
+                    The video below shows Create magic :
+                </p>
+                <div class="center">
+                    <iframe width="560" height="315" src="//www.youtube.com/embed/EvSC76mDows" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="center">
+                <hr class="soften">
+                For more details, email: <a href="mailto:sm@create.io">info@create.io</a> 
             </div>
             <hr class="soften">
         </div>
