--- a/sub/cesiumDemo/index.html
+++ b/sub/cesiumDemo/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="author" content="Vanessa Archambault">
         <title>Create.IO - Cesium - WebGL Virtual Globe and Map Engine</title>
         <link rel="shortcut icon" href="http://cesiumjs.org/images/favicon.ico">
         <link href="http://cesiumjs.org/demos/atom.xml" type="application/atom+xml" rel="alternate" title="Cesium Blog">
