changing the intro stuff

--- a/GDI/angular/index.html
+++ b/GDI/angular/index.html
@@ -47,11 +47,15 @@
                     <h1>AngularJS</h1>
                     <h3>Girl Develop It</h3>
                     <p>
-                        <small><a href="http://danlucas.org">Daniel Lucas</a> / <a href="http://twitter.com/danlucas">@danlucas</a></small>
+                        <small>Created by: <a href="http://danlucas.org">Daniel Lucas</a> / <a href="http://twitter.com/danlucas">@danlucas</a></small>
+                    </p>
+                    <p>
+                        <small>Taught by: <a href="http://zoombear.github.io">Vanessa Archambault</a> / <a href="http://twitter.com/zoombear">@zoombear</a></small>
                     </p>
                 </section>
 
                 <section data-markdown="content/intro.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/install.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/bootstrap.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
