final adjustments to the presentation

--- a/GDI/angular/index.html
+++ b/GDI/angular/index.html
@@ -73,7 +73,7 @@
                     <p>You've created a model, placed into a controller, displayed that model in a view!</p>
                 </section>
 
-                <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+<!--                 <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section> -->
                 <section data-markdown="content/directives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section>
