adding intro slides for welcome, network, and MVC

--- a/GDI/angular/index.html
+++ b/GDI/angular/index.html
@@ -54,6 +54,92 @@
                     </p>
                 </section>
 
+                <section>
+                  <h3>Welcome!</h3>
+                  <div class = "left-align">
+                  <p>Girl Develop It is here to provide affordable and accessible programs to learn software through mentorship and hands-on instruction.</p>
+                  <p class ="green">Some "rules"</p>
+                  <ul>
+                    <li>We are here for you!</li>
+                    <li>Every question is important.</li>
+                    <li>Help each other.</li>
+                    <li>Have fun!</li>
+                  </ul>
+                  </div>
+                </section>
+
+                <section>
+                  <h3>Welcome!</h3>
+                  <div class = "left-align">
+                  <p class = "blue">Tell us about yourself.</p>
+                  <ul>
+                    <li>Who are you?</li>
+                    <li>What do you hope to get out of the class?</li>
+                    <li>What's your favorite movie? (this will come in handy later)</li>
+                  </ul>
+                  </div>
+                </section>
+                
+                <section>
+                  <h3>What we will cover today</h3>
+                  <ul>
+                    <li class ="fragment">Basic MVC concepts</li>
+                    <li class ="fragment">Getting an Angular App started!</li>
+                    <li class ="fragment">Controllers and directives</li>
+                  </ul>
+                </section>
+
+                <section>
+                  <h3>What we will not cover today</h3>
+                  <ul>
+                    <li class ="fragment">Advanced MVC theory</li>
+                    <li class ="fragment">Services, Factories, Emits and Broadcasts</li>
+                    <li class ="fragment">Advanced Dependency Injection</li>
+                  </ul>
+                </section>
+
+                <section>
+                  <h3>Welcome!</h3>
+                  <div class = "left-align">
+                  <p class = "blue">Wi-Fi Access</p>
+                  <p>In order to log in to the internets:</p>
+                  <br>
+                  <ul>
+                    <li>Connect to:  </li>
+                  </ul>
+                  <center><p class ="green">NextSpaceSJ 2.4GHz</p></center>
+                  <br>
+                  <ul>
+                    <li>The password is:  </li>
+                  </ul>
+                  <br>
+                  <center><p class ="green">co408work</p></center>
+                  </div>
+                </section>
+
+                <section>
+                  <h3>What is MVC?</h3>
+                  <ul>
+                    <li class ="fragment">Stands for:</li>
+                    <li class ="fragment">Model</li>
+                    <li class ="fragment">View</li>
+                    <li class ="fragment">Controller</li>
+                  </ul>
+                  </br>
+                    <p class ="fragment">A software architectural pattern for implementing user interfaces. It divides a given software application into three interconnected parts, so as to separate internal representations of information from the ways that information is presented to or accepted from the user.</p>
+                </section>
+
+                <section>
+                  <h3>To put it simply: </h3>
+                  <ul>
+                    <li class ="fragment">Model is your data model (ex: JSONs)</li>
+                    <li class ="fragment">View is the CSS and styling</li>
+                    <li class ="fragment">Controller are the functions that give your app LIFE!</li>
+                  </ul>
+              </br>
+                    <p class ="fragment">If you keep these separate, it's a lot easier to update your site and understand your code.</p>
+                </section>
+
                 <section data-markdown="content/intro.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/install.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/bootstrap.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
