small changes for HFA and birch image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
           <section class="about-me-info">
             <h1>Vanessa Archambault</h1>
-            <p>I am a Frontend and GIS Engineer at <a href="http://create.io" target="_blank"> Create.io</a>.
+            <p>I am a Software Engineer for <a href="https://www.hillaryclinton.com/" target="_blank"> Hillary For America</a>.
             <br>
              I am the San Jose Chapter leader of <a href="https://www.girldevelopit.com/chapters/san-jose" target="_blank"> Girl Develop It</a>.
              <br>
