--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
           </div>
           <section class="about-me-info">
             <h1>Vanessa Archambault</h1>
-            <p>I am Director of Engineering at <a href="https://flippable.org/" target="_blank"> Flippable</a>.
+            <p>I'm a Senior Software Engineer at <a href="https://hicleo.com/" target="_blank"> Cleo</a>
              <br>
-              I spend my time coding, climbing, and <a href="https://twitter.com/flippable_org" target="_blank"> #resisting</a>.</p>
+              and I'm CTO of <a href="http://techbychoice.org/" target="_blank"> Tech By Choice</a>
+            </p>
             <hr>
             <h5>I'm also involved with:</h5>
             <ul>
-              <li><a href="https://www.girldevelopit.com/chapters/san-jose" target="_blank">Girl Develop It </a></li>
+              <li><a href="https://www.pacificpinball.org/" target="_blank">Pacific Pinball Museum </a></li>
             </ul>
             <ul>
               <li><a href="https://www.awesomefoundation.org/en/chapters/sanjose" target="_blank">The Awesome Foundation</a></li>
